--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -6,7 +6,7 @@
     padding-top: 5.5rem;
     column-gap: 2rem;
     align-items: center;
-    z-index: 100;
+    z-index: 1;
 }
 
 /* /Socials/ */
